<resources>
    <string name="app_name">SifonRide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name">First Name</string>
    <string name="other_name">Other Name</string>
    <string name="email">Email</string>
    <string name="phone" />
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Login</string>
    <string name="err_msg_email">Your email address is required</string>
    <string name="err_msg_email_2">Your email is in valid</string>
    <string name="err_msg_phone">Your phone number is required</string>
    <string name="err_msg_password">Your password is required</string>
    <string name="err_msg_password_2">Your password is too short</string>
    <string name="err_msg_other_name">Your other name is required</string>
    <string name="err_msg_name">Your name is required</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome back</string>
    <string name="todo">TODO</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="choose_address">choose address</string>
    <string name="choose_on_map">Choose on map</string>
    <string name="done">Done</string>
    <string name="title_activity_maps">Map</string>
    <string name="home_address">Home address</string>
    <string name="auto_drag_text">Drag or zoom to your desire location</string>
    <string name="add_home">Add Home</string>
    <string name="add_work">Add Work </string>
    <string name="save_places">Save Places</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="pick_up">Pickup</string>
    <string name="work_address">Work address</string>
    <string name="des_address">Destination address</string>
    <string name="pick_up_address">Pickup address</string>
    <string name="ride_now">Ride now</string>
    <string name="ride_later">ride later</string>
    <string name="loading">loading</string>
    <string name="set_up_your_ride">Set up your ride</string>
    <string name="your_location">Your location</string>
    <string name="destination">Destination</string>
    <string name="economy">Economy</string>
    <string name="motor_cycle">Motor cycle</string>
    <string name="fare_estimate">Estimated fare</string>
    <string name="cash">Cash</string>
    <string name="_1_4">1–4</string>
    <string name="request_ride">Request ride</string>
    <string name="confirm_your_location">Confirm your Location</string>
    <string name="credit_card">Credit card</string>
    <string name="sifon_economy">Sifon Economy</string>
    <string name="base_fare">Base fare</string>
    <string name="cost_per_minute">Cost per minute</string>
    <string name="cost_per_km">Cost per km</string>
    <string name="minimum_fare">Minimum Fare</string>
    <string name="payment_options">Payment options</string>
    <string name="cancel">Cancel</string>
    <string name="language">Language</string>
    <string name="privacy_setting">Privacy settings</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="split">Spilt</string>
    <string name="call_driver">Call</string>
    <string name="booking">Booking ride</string>
    <string name="no_driver_text">We are sorry there are no available driver in your area at the moment please try again after some minute</string>
    <string name="driver_arrive_text">Driver has arrived at your location</string>
    <string name="booking_alert">Booking alert</string>
    <string name="no_internet">No internet connection available</string>
    <string name="trip_start_text">Your trip has started</string>
    <string name="add_destination">Add destination</string>
    <string name="cancel_alert_text">Your request was cancelled by a driver please wait to be connected to another driver.</string>
    <string name="car_name">Car name</string>
    <string name="plate_number">Plate number</string>
    <string name="more_info">More info</string>
    <string name="distance_fare">Distance fare</string>
    <string name="promotion">Promotion</string>
    <string name="duration_fare">Duration fare</string>
    <string name="total_fare">Total fare</string>
    <string name="amount_to_be_paid">Amount to be paid</string>
    <string name="bounce">Bounce</string>
    <string name="upload_profile_image">Upload profile image</string>
    <string name="update_profile">Update profile image</string>
    <string name="gallery">Gallery</string>
    <string name="Camera">Camera</string>
    <string name="update">Update</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="edit_password_message">Please enter your current password to continue</string>
    <string name="edit_password_message_2">Please enter your new password ( Password most be above 6 digits. )</string>
    <string name="next">Next</string>
    <string name="new_password">New password</string>
    <string name="notification_setting">Notification Settings</string>


</resources>
