<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nav.setting.ChangePassword"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/oldPassLayout"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/old_pasS"
            app:hintTextAppearance="@style/MyEditText"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/edit_password_message"
            >
            <EditText
                android:id="@+id/old_pass"
                android:hint="@string/password"
                android:theme="@style/MyEditText"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:targetApi="lollipop" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/nextToPass"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/next"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/newPassLayout"
        android:visibility="gone"
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/newPasswordA"
            android:layout_width="match_parent"
            app:hintTextAppearance="@style/MyEditText"
            android:layout_height="wrap_content"
            app:helperText="@string/edit_password_message_2"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/newPassword"
                android:theme="@style/MyEditText"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#bfbfbf"
            android:padding="5dp"
            android:text=""/>

        <Button
            android:id="@+id/changePass"
            android:textColor="#FFF"
            android:textAllCaps="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"/>

    </LinearLayout>

</LinearLayout>