<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/bookingAlertTitle"
        android:text="@string/booking_alert"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        />
    <TextView
        android:id="@+id/cancelAlertText"
        android:layout_margin="16dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:lineSpacingExtra="@dimen/google_1x"
        android:text="@string/cancel_alert_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/doneAlertBtn"
        android:textColor="@color/white"
        android:text="@string/done"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_round"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ButtonStyle" />



</LinearLayout>