<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nav.setting.Privacy_setting"
    android:orientation="vertical"
    android:background="#ececec">

    <TextView
        android:id="@+id/changeP"
        android:text="@string/change_password"
        android:padding="16dp"
        android:background="@color/white"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/notification_setting_id"
        android:text="@string/notification_setting"
        android:padding="16dp"
        android:background="@color/white"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/chan"
        android:text="@string/location"
        android:padding="16dp"
        android:background="@color/white"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/deleteAccount"
        android:textColor="@color/red_300"
        android:text="@string/delete_account"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />




</LinearLayout>