<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <android.support.design.widget.TextInputLayout
            android:layout_gravity="center_vertical"
            android:id="@+id/sign_in_email_T"
            android:layout_marginTop="10dp"
            android:theme="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sign_in_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                tools:targetApi="lollipop" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_in_pass_T"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditText"
            android:layout_marginTop="10dp"
            app:passwordToggleTint="@color/colorPrimary"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/sign_in_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"

                tools:targetApi="lollipop" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/sign_in_btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sign_in"
                android:textColorHint="@color/colorPrimary"
                android:background="@drawable/button_round"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/sign_up_click"
                android:text="@string/sign_up"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/new_password"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />



        </LinearLayout>

    </LinearLayout>

</ScrollView>