<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nav.Settings"
    android:background="@color/background_color">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/content_home_driver_detatils"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/profile"
                app:civ_border_width="1dp"
                app:civ_border_color="#616b68"/>

            <TextView
                android:id="@+id/name_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="27dp" />

        </LinearLayout>

        <TextView
            android:background="@color/white"
            android:id="@+id/email_setting"
            android:text="@string/email"
            android:padding="16dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/phone_setting"
            android:text="@string/phone"
            android:padding="16dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/addHwR"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:background="@color/white"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/homeImageS"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_home_"
                    android:layout_marginEnd="5dp"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/todo" />

                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/add_home_addressS"
                        android:paddingTop="5dp"
                        android:text="@string/add_home"
                        android:textColor="#616b68"
                        android:layout_marginStart="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/home_addressS"

                        android:visibility="gone"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:background="@color/white"
                android:id="@+id/homeLayout"
                android:layout_marginTop="1dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/workImageS"
                    android:src="@drawable/ic_work_"
                    android:layout_width="25dp"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_height="25dp"
                    android:contentDescription="@string/todo" />

                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:paddingTop="5dp"
                        android:id="@+id/workS"
                        android:text="@string/add_work"
                        android:layout_marginStart="10dp"
                        android:textColor="#616b68"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="RtlHardcoded" />
                    <TextView
                        android:visibility="gone"
                        android:id="@+id/workSS"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_marginStart="10dp"
                        android:paddingStart="1dp"
                        android:layout_marginEnd="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:visibility="gone"
                android:id="@+id/addShortcutS"
                android:text="@string/save_places"
                android:textColor="#616b68"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:drawablePadding="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/privacy_settings"
            android:text="@string/privacy_setting"
            android:layout_marginTop="10dp"
            android:padding="16dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:visibility="gone"
            android:id="@+id/language"
            android:text="@string/language"
            android:layout_marginTop="1dp"
            android:padding="16dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/signOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:text="@string/sign_out"/>
    </LinearLayout>

</ScrollView>